# discord-bot-project

./: config.py  ids.db  language.db  main.py  project.py  pyproject.toml  readme.txt  replit_zip_error_log.txt  requirements.txt  scores.db  words.db
