[tool.poetry]
name = "repl_nix_discord-bot-project"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
english-words = "^2.0.0"
requests = "^2.29.0"
webserver = "^0.10.3"
Flask = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
